--- a/day_5/index.html
+++ b/day_5/index.html
@@ -1,304 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Application Form</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: { extend: {} },
-        plugins: [
-          function ({ addBase, theme }) {
-            addBase({
-              'input[type="text"], input[type="email"], input[type="number"], select':
-                {
-                  border: "0.5px solid #d1d5db",
-                },
-            });
-          },
-        ],
-      };
-    </script>
-  </head>
-  <body>
-    <div
-      class="min-h-screen bg-gradient-to-tl from-orange-200 to-orange-50 p-4 md:p-20"
-    >
-      <div class="max-w-4xl mx-auto bg-white rounded-lg shadow-md p-8">
-        <form name="applicationForm" class="flex flex-col gap-6">
-          <h1 class="text-2xl font-bold text-gray-800">Application Form</h1>
-          <div class="grid grid-cols-1 gap-6 sm:grid-cols-2">
-            <div>
-              <label
-                for="firstName"
-                class="block text-sm font-medium text-gray-700 mb-2"
-              >
-                First Name <span class="text-red-500">*</span>
-              </label>
-              <input
-                type="text"
-                id="firstName"
-                name="firstName"
-                placeholder="Enter your first name"
-                required
-                class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-                minlength="2"
-                maxlength="50"
-                pattern="^[a-zA-Z\s]+$"
-              />
-            </div>
-            <div>
-              <label
-                for="lastName"
-                class="block text-sm font-medium text-gray-700 mb-2"
-              >
-                Last Name <span class="text-red-500">*</span>
-              </label>
-              <input
-                type="text"
-                id="lastName"
-                name="lastName"
-                placeholder="Enter your last name"
-                required
-                class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-                minlength="2"
-                maxlength="50"
-                pattern="^[a-zA-Z\s]+$"
-              />
-            </div>
-            <div>
-              <label
-                for="email"
-                class="block text-sm font-medium text-gray-700 mb-2"
-              >
-                Email <span class="text-red-500">*</span>
-              </label>
-              <input
-                type="email"
-                id="email"
-                name="email"
-                placeholder="Enter your email"
-                required
-                class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-                pattern="^[^\s@]+@[^\s@]+\.[^\s@]+$"
-              />
-            </div>
-            <div>
-              <label
-                for="age"
-                class="block text-sm font-medium text-gray-700 mb-2"
-              >
-                Age <span class="text-red-500">*</span>
-              </label>
-              <input
-                type="number"
-                id="age"
-                name="age"
-                placeholder="Enter your age"
-                required
-                class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-                min="18"
-                max="100"
-                step="1"
-              />
-            </div>
-          </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Modern Application Form</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: { extend: {} },
+    };
+  </script>
+</head>
+<body class="bg-gradient-to-r from-pink-200 via-pink-100 to-pink-300 min-h-screen flex items-center justify-center p-6">
 
-          <!-- Education Level -->
-
-          <div>
-            <label
-              for="education"
-              class="block text-sm font-medium text-gray-700 mb-2"
-            >
-              Education Level <span class="text-red-500">*</span>
-            </label>
-            <select
-              id="education"
-              name="education"
-              required
-              class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-            >
-              <option value="">Select your education</option>
-              <option value="bac+2">Bac+2</option>
-              <option value="bac+3">Bac+3</option>
-              <option value="bac+5">Bac+5</option>
-            </select>
-          </div>
-
-          <!-- City -->
-          <div>
-            <label
-              for="city"
-              class="block text-sm font-medium text-gray-700 mb-2"
-            >
-              City <span class="text-red-500">*</span>
-            </label>
-            <select
-              id="city"
-              name="city"
-              required
-              class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-            >
-              <option value="">Select your city</option>
-              <option value="casablanca">Casablanca</option>
-              <option value="rabat">Rabat</option>
-              <option value="marrakech">Marrakech</option>
-              <option value="fes">Fes</option>
-              <option value="tangier">Tangier</option>
-              <option value="agadir">Agadir</option>
-              <option value="meknes">Meknes</option>
-              <option value="oujda">Oujda</option>
-              <option value="kenitra">Kenitra</option>
-              <option value="tetouan">Tetouan</option>
-            </select>
-          </div>
-
-          <div>
-            <label
-              for="availability"
-              class="block text-sm font-medium text-gray-700 mb-2"
-            >
-              Availability <span class="text-red-500">*</span>
-            </label>
-            <div class="flex items-center gap-2 mb-1">
-              <input
-                type="radio"
-                id="full_time"
-                name="availability"
-                value="full_time"
-                required
-              />
-              <label for="full_time" class="text-sm font-medium text-gray-700">
-                Full Time
-              </label>
-            </div>
-            <div class="flex items-center gap-2">
-              <input
-                type="radio"
-                id="part_time"
-                name="availability"
-                value="part_time"
-                required
-              />
-              <label for="part_time" class="text-sm font-medium text-gray-700">
-                Part Time
-              </label>
-            </div>
-          </div>
-
-          <!-- Domain of interest -->
-
-          <div>
-            <label
-              for="domainsOfInterest"
-              class="block text-sm font-medium text-gray-700 mb-2"
-            >
-              Domains of interest <span class="text-red-500">*</span>
-            </label>
-            <div class="flex flex-col gap-2 items-start">
-              <div class="flex items-center gap-2">
-                <input
-                  type="checkbox"
-                  id="ai"
-                  name="domainsOfInterest"
-                  value="ai"
-                />
-                <label for="ai" class="text-sm font-medium text-gray-700">
-                  AI
-                </label>
-              </div>
-              <div class="flex items-center gap-2">
-                <input
-                  type="checkbox"
-                  id="backend"
-                  name="domainsOfInterest"
-                  value="backend"
-                />
-                <label for="backend" class="text-sm font-medium text-gray-700">
-                  Backend
-                </label>
-              </div>
-              <div class="flex items-center gap-2">
-                <input
-                  type="checkbox"
-                  id="frontend"
-                  name="domainsOfInterest"
-                  value="frontend"
-                />
-                <label for="frontend" class="text-sm font-medium text-gray-700">
-                  Frontend
-                </label>
-              </div>
-              <div class="flex items-center gap-2">
-                <input
-                  type="checkbox"
-                  id="fullstack"
-                  name="domainsOfInterest"
-                  value="fullstack"
-                />
-                <label
-                  for="fullstack"
-                  class="text-sm font-medium text-gray-700"
-                >
-                  Fullstack
-                </label>
-              </div>
-              <div class="flex items-center gap-2">
-                <input
-                  type="checkbox"
-                  id="mobile"
-                  name="domainsOfInterest"
-                  value="mobile"
-                />
-                <label for="mobile" class="text-sm font-medium text-gray-700">
-                  Mobile
-                </label>
-              </div>
-              <div class="flex items-center gap-2">
-                <input
-                  type="checkbox"
-                  id="devops"
-                  name="domainsOfInterest"
-                  value="devops"
-                />
-                <label for="devops" class="text-sm font-medium text-gray-700">
-                  Devops
-                </label>
-              </div>
-            </div>
-          </div>
-
-          <!-- Submit Button -->
-
-          <div>
-            <button
-              type="submit"
-              class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-orange-500 hover:bg-orange-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-orange-500"
-            >
-              Submit Application
-            </button>
-          </div>
-        </form>
-
-        <!-- success message -->
-        <div class="text-sm  mt-4 text-center hidden" id="successMessage">
-            <svg class="h-16 w-16 text-green-500 mx-auto" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
-            </svg>
-          <h3 class="text-xl font-bold text-gray-900 mb-2"></h3>Application Submitted!</h3>
-          <p class="text-gray-600">Thank you for your application. We will contact you soon.</p>
-          <button id="submitAnotherApplication" class="w-full flex mt-4 justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-orange-500 hover:bg-orange-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-orange-500">
-            Submit Another Application
-          </button>
-        </div>
-
-        <!-- error message -->
-        <div class="text-sm text-red-500 mt-4 hidden" id="errorMessage">
-      </div>
+  <div class="w-full max-w-2xl bg-white rounded-3xl shadow-2xl overflow-hidden">
+    <!-- Header -->
+    <div class="bg-pink-500 text-white p-8 text-center">
+      <h1 class="text-4xl font-extrabold tracking-wide">Join Us!</h1>
+      <p class="mt-2 text-pink-100">Fill the form below to apply</p>
     </div>
 
-    <script type="module" src="assets/index.js"></script>
-  </body>
+    <!-- Form Body -->
+    <form name="applicationForm" class="p-8 flex flex-col gap-6">
+      
+      <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+        <input type="text" name="firstName" placeholder="First Name*" required
+          class="p-3 border border-pink-300 rounded-xl focus:ring-2 focus:ring-pink-400 focus:outline-none"/>
+        <input type="text" name="lastName" placeholder="Last Name*" required
+          class="p-3 border border-pink-300 rounded-xl focus:ring-2 focus:ring-pink-400 focus:outline-none"/>
+      </div>
+
+      <input type="email" name="email" placeholder="Email*" required
+        class="p-3 border border-pink-300 rounded-xl focus:ring-2 focus:ring-pink-400 focus:outline-none"/>
+
+      <input type="number" name="age" placeholder="Age*" required min="18" max="100"
+        class="p-3 border border-pink-300 rounded-xl focus:ring-2 focus:ring-pink-400 focus:outline-none"/>
+
+      <select name="education" required class="p-3 border border-pink-300 rounded-xl focus:ring-2 focus:ring-pink-400 focus:outline-none">
+        <option value="">Education Level*</option>
+        <option value="bac+2">Bac+2</option>
+        <option value="bac+3">Bac+3</option>
+        <option value="bac+5">Bac+5</option>
+      </select>
+
+      <select name="city" required class="p-3 border border-pink-300 rounded-xl focus:ring-2 focus:ring-pink-400 focus:outline-none">
+        <option value="">City*</option>
+        <option value="casablanca">Casablanca</option>
+        <option value="rabat">Rabat</option>
+        <option value="marrakech">Marrakech</option>
+        <option value="fes">Fes</option>
+      </select>
+
+      <!-- Availability -->
+      <div class="flex gap-6">
+        <label class="flex items-center gap-2">
+          <input type="radio" name="availability" value="full_time" required class="accent-pink-500"/>
+          Full Time
+        </label>
+        <label class="flex items-center gap-2">
+          <input type="radio" name="availability" value="part_time" required class="accent-pink-500"/>
+          Part Time
+        </label>
+      </div>
+
+      <!-- Domains -->
+      <div class="flex flex-wrap gap-4">
+        <label class="flex items-center gap-2"><input type="checkbox" name="domainsOfInterest" value="ai" class="accent-pink-500"/> AI</label>
+        <label class="flex items-center gap-2"><input type="checkbox" name="domainsOfInterest" value="backend" class="accent-pink-500"/> Backend</label>
+        <label class="flex items-center gap-2"><input type="checkbox" name="domainsOfInterest" value="frontend" class="accent-pink-500"/> Frontend</label>
+        <label class="flex items-center gap-2"><input type="checkbox" name="domainsOfInterest" value="fullstack" class="accent-pink-500"/> Fullstack</label>
+        <label class="flex items-center gap-2"><input type="checkbox" name="domainsOfInterest" value="mobile" class="accent-pink-500"/> Mobile</label>
+        <label class="flex items-center gap-2"><input type="checkbox" name="domainsOfInterest" value="devops" class="accent-pink-500"/> Devops</label>
+      </div>
+
+      <!-- Buttons -->
+      <div class="flex gap-4 mt-4">
+        <button type="submit" class="flex-1 py-3 bg-pink-500 hover:bg-pink-600 text-white font-bold rounded-2xl shadow-lg transition">
+          Submit
+        </button>
+        <button type="button" id="clearForm" class="flex-1 py-3 bg-pink-100 hover:bg-pink-200 text-pink-700 font-bold rounded-2xl shadow transition">
+          Clear
+        </button>
+      </div>
+    </form>
+
+    <!-- Success Message -->
+    <div id="successMessage" class="hidden p-8 text-center bg-pink-50 text-pink-700 font-semibold">
+      <h3 class="text-2xl mb-2">Application Submitted!</h3>
+      <p>Thank you! We will contact you soon.</p>
+    </div>
+  </div>
+
+  <script type="module" src="assets/index.js"></script>
+  <script>
+    document.getElementById("clearForm").addEventListener("click", () => {
+      document.forms.applicationForm.reset();
+    });
+  </script>
+</body>
 </html>
